--- a/index.html
+++ b/index.html
@@ -8,30 +8,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
-      /* Configuração de fontes globais */
-      body {
-          font-family: 'Roboto', sans-serif; /* Substitua 'Roboto' pela fonte de sua preferência */
-          transform: rotate(-90deg);
-          transform-origin: left top;
-          width: 100vh;
-          height: 100vw;
-          overflow-x: hidden;
-          position: absolute;
-          top: 100%;
-          left: 0;
-          margin: 0; /* Remove margens padrão */
-      }
-
-      @media (orientation: landscape) {
-          body {
-              transform: none;
-              width: auto;
-              height: auto;
-              overflow: auto;
-              position: static;
-          }
-      }
-
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+    }
+  </style>
+  
       /* Estilo adicional para títulos */
       h1, h2, h3 {
           font-weight: 700; /* Aplica um peso mais forte aos títulos */
